tests/paczka1/fuzzy1/39283063.err
Error in line 1: VEs A671 58,8
Error in line 14: y8dqKMVCbu S707 60,0
Error in line 16: VEs A516 -2,1
Error in line 23: PTjcmfAX A516 47,9
Error in line 18: rRuHUTZ717C S582 15,3
